# tetris

./: CMakeLists.txt  README.md  op.sh
src/: game_logic.h  main.cpp  matrix.h  piece.h
src/modemulti/: communication.cpp  communication.h  message.cpp  message.h  message_disconnect.cpp  message_disconnect.h  message_player.cpp  message_player.h  message_start.cpp  message_start.h  player.cpp  player.h  server.cpp  server.h
src/scene/: GameWindow.cpp  GameWindow.h  MatrixToGraph.h  Scoreboard.cpp  Scoreboard.h
